# mandelbrot

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: deploy.yml
apps/: Cargo.toml  README.md
apps/src/: render.rs
client/: .gitignore  README.md  package.json
client/public/: index.html  manifest.json
client/src/: FractalLayer.stories.tsx  FractalLayer.tsx  GridLayer.stories.tsx  GridLayer.tsx  Mandelbrot.stories.tsx  Mandelbrot.tsx  Map.css  Map.tsx
fractal/: Cargo.toml  README.md
fractal/src/: coords.rs  render.rs
lib/src/: lib.rs
src/: App.css  App.tsx  Map.stories.tsx  Map.tsx  coord.rs  coords.rs  fractal.rs  lib.rs  main.rs  render.rs
src/fractal/: coords.rs  julia.rs  mandelbrot.rs  mod.rs
web/: Cargo.toml  README.md  example.js  index.js  package.json  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
web/public/: index.html
web/src/: example.js  lib.rs  render.rs
