[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Jake Fowler <retwere@gmail.com>"]
edition = "2021"

[lib]
name = "mandelbrot"
path = "src/fractal.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mandelbrot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
image = "0.24"
num-complex = "0.4"
wasm-bindgen = "0.2.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
