[package]
name = "retwere-mandelbrot"
version = "0.1.0"
authors = ["Jake Fowler <retwere@gmail.com>"]
edition = "2021"

[[bin]]
name = "fractal"
path = "src/bin/cli.rs"

[[bin]]
name = "tileserver"
path = "src/bin/tileserver.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
fractal = { path = "./fractal" }
image = "0.24"
num-complex = "0.4"
rocket = "0.5.0-rc.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
