[package]
name = "fractal-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fractal = { path = "../fractal" }
js-sys = "0.3"
num-complex = "0.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Window',
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
